--- a/back/.env
+++ b/back/.env
@@ -1,4 +1,4 @@
-DB_USER='RN'
-DB_PASSWORD='RN'
-DB_HOST='A-PHZ2-AMI-007'
-DB_NAME='practicaRN' 
+DB_USER='RN1'
+DB_PASSWORD='RN123'
+DB_HOST='A-PHZ2-AMI-002'
+DB_NAME='BDUsuario' 
