--- a/pruebaNuevaProfe/package.json
+++ b/pruebaNuevaProfe/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.5.2",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.3",
